Ajout de la homepage qui va permettre de rechercher un projet. Ajout des liens javascript et css dans index.html. Ajout des traductions fr et en pour cette page. Ajout d'image GitHub.

--- a/translations/translation.fr.json
+++ b/translations/translation.fr.json
@@ -1,5 +1,13 @@
 {
     "app" : {
-        "title": "Homework Zengularity"
-    }
+        "title" : "Homework Zengularity"
+    },
+    "homepage" : {
+        "choose_repository" : "Choisir un repository public",
+        "name_repository" : "Grâce à son nom",
+        "author_repository" : "Grâce à son auteur",
+        "repository" : "Repository public",
+        "author" : "Auteur"
+    },
+    "footer" : "Développer par Nicolas Fonsat - Développeur Informatique"
 }
