Division de la page repository committer de la page repository commits. Ajout de Ng-Cookies pour pouvoir enregistrer les recherches déjà faite. Ajout du Service APIGithub qui permet d'alléger les deux controllers. Modification du mot "développé" dans les traductions

--- a/translations/translation.fr.json
+++ b/translations/translation.fr.json
@@ -9,5 +9,5 @@
         "repository" : "Repository public",
         "author" : "Auteur"
     },
-    "footer" : "Développer par Nicolas Fonsat - Développeur Informatique"
+    "footer" : "Développé par Nicolas Fonsat - Développeur Informatique"
 }
