--- a/translations/translation.en.json
+++ b/translations/translation.en.json
@@ -20,7 +20,8 @@
         "back_homepage" : "Back to homepage",
         "commit_repository" : "Commits of repository",
         "all_repository" : "All commits",
-        "committer_repository" : "Committers of repository"
+        "committer_repository" : "Committers of repository",
+        "description_repository" : "Description of repository"
     },
     "footer" : "Developed by Nicolas Fonsat - IT Developer"
 }
